Fix padding on mobile

--- a/src/styles/art.module.scss
+++ b/src/styles/art.module.scss
@@ -7,7 +7,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 30px 0;
+  margin: 0;
   perspective: 1000000px;
   &__art {
   }
@@ -37,11 +37,12 @@
   left: 0;
   right: 0;
   flex-direction: column;
+  padding: 15px 30px;
 
   &__mainArea {
     max-width: $desktop-width;
     width: 100%;
-    margin: 0 auto;
+    margin: 0 auto 15px;
   }
   &__positioning {
     flex: 1;
